cyclonedx-bom/tests/snapshots/specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-component-types-1.3.json.snap
---
source: cyclonedx-bom/tests/specification_tests.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.3/valid-component-types-1.3.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.3",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "components": [
    {
      "type": "application",
      "name": "application-a",
      "version": "1.0"
    },
    {
      "type": "library",
      "name": "library-a",
      "version": "1.0"
    },
    {
      "type": "framework",
      "name": "framework-a",
      "version": "1.0"
    },
    {
      "type": "container",
      "name": "container-a",
      "version": "1.0"
    },
    {
      "type": "operating-system",
      "name": "operating-system-a",
      "version": "1.0"
    },
    {
      "type": "firmware",
      "name": "firmware-a",
      "version": "1.0"
    },
    {
      "type": "device",
      "name": "device-a",
      "version": "1.0"
    },
    {
      "type": "file",
      "name": "file-a",
      "version": "1.0"
    }
  ]
}
