cyclonedx-bom/tests/snapshots/specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-metadata-timestamp-1.3.json.snap
---
source: cyclonedx-bom/tests/specification_tests.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.3/valid-metadata-timestamp-1.3.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.3",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "metadata": {
    "timestamp": "2020-04-13T20:20:39+00:00"
  },
  "components": []
}
